tests/fixtures/invalid/min_float_str.py
# Cannot call min() with Float, Str
x = min(1.0, "hello")
